# clandro-tools

./: Makefile.am  README.md  SECURITY.md  clandro-login.sh.in  clandro.properties  configure.ac  init-clandro-properties.sh.in
.github/workflows/: build.yml  mirrors.yml
doc/: Makefile.am  clandro.1.md.in
mirrors/: Makefile.am  default  generate-wiki-page.sh
mirrors/asia/: clandro.niranjan.co  linux.domainesia.com  mirror.freedif.org  mirror.jeonnam.school  mirror.meowsmp.net  mirror.nag.albony.in  mirror.nevacloud.com  mirror.rinarin.dev  mirror.twds.com.tw  mirrors.cbrx.io  mirrors.in.sahilister.net  mirrors.krnk.org  mirrors.nguyenhoang.cloud  mirrors.ravidwivedi.in  mirrors.saswata.cc  tmx.xvx.my.id
mirrors/chinese_mainland/: mirror.iscas.ac.cn  mirror.nyist.edu.cn  mirror.sjtu.edu.cn  mirrors.aliyun.com  mirrors.bfsu.edu.cn  mirrors.cernet.edu.cn  mirrors.cqupt.edu.cn  mirrors.hust.edu.cn  mirrors.nju.edu.cn  mirrors.pku.edu.cn  mirrors.sau.edu.cn  mirrors.sdu.edu.cn  mirrors.sustech.edu.cn  mirrors.tuna.tsinghua.edu.cn  mirrors.ustc.edu.cn  mirrors.zju.edu.cn
mirrors/europe/: clandro.3san.dev  clandro.cdn.lumito.net  clandro.librehat.com  ftp.agdsn.de  ftp.fau.de  ftp.icm.edu.pl  grimler.se  is.mirror.flokinet.net  md.mirrors.hacktegic.com  mirror.accum.se  mirror.autkin.net  mirror.bouwhuis.network  mirror.cutie.dating  mirror.leitecastro.com  mirror.sunred.org  mirrors.de.sahilister.net  mirrors.medzik.dev  nl.mirror.flokinet.net  packages.clandro.dev  ro.mirror.flokinet.net
mirrors/north_america/: clandro.danyael.xyz  gnlug.org  mirror.csclub.uwaterloo.ca  mirror.fcix.net  mirror.mwt.me  mirror.quantum5.ca  mirror.vern.cc  mirrors.uclandro.dev  plug-mirror.rcac.purdue.edu
mirrors/oceania/: mirrors.middlendian.com
mirrors/russia/: mirror.mephi.ru  repository.su
motds/: Makefile.am  motd-playstore  motd.sh.in
scripts/: Makefile.am  chsh.in  clandro-backup.in  clandro-change-repo.in  clandro-fix-shebang.in  clandro-info.in  clandro-open-url.in  clandro-open.in  clandro-reload-settings.in  clandro-reset.in  clandro-restore.in  clandro-setup-package-manager.in  clandro-setup-storage.in  clandro-wake-lock.in  clandro-wake-unlock.in  dalvikvm.in  login.in  pkg.in  su.in
src/: Makefile.am  cmd.c
wiki/: mirrors_header.md
